# bmad4_wyck_vol

./: .env.example  .env.production.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BACKTEST_ALIGNMENT_ANALYSIS.md  CHANGELOG.md  CI_ASSESSMENT_FINAL.md  CLAUDE.md  CORRECTED_TASK_LIST_5.4.md  DEVOPS_QA_RESOLUTION_COMPLETE.md  DOW_JONES_30_BACKTEST_RESULTS.md  EURUSD_BACKTEST_REPORT.md  EUR_USD_BACKTEST_RESULTS.md  EXECUTION_SUMMARY.md  FutureWork.md  IMPLEMENTATION-SUMMARY-11.8b.md  IMPLEMENTATION_BRIEF.md  IMPLEMENTATION_COMPLETION_STORY_12.8.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_11.8a.md  KNOWLEDGE_TRANSFER_STORY_11_9.md  MULTI_ASSET_COMPARATIVE_ANALYSIS.md  NAS100_BACKTEST_PERFORMANCE_REPORT.md  PERFORMANCE_PROFILING_GUIDE.md  PROJECT-BRIEF.md  QA-FIXES-11.8b.md  QA_FINAL_REVIEW_12.6A.md  QA_FIXES_COMPLETED.md  README.md  REAL_DATA_BACKTEST_RESULTS.md  SESSION_SUMMARY.md  SIGNAL_SCANNING_GUIDE.md  SPX500_BACKTEST_PERFORMANCE_REPORT.md  SPY_MULTI_TIMEFRAME_ANALYSIS.md  STORY-16.4A-IMPLEMENTATION-SUMMARY.md  STORY_11.2_IMPLEMENTATION_SUMMARY.md  STORY_11.4_ASSESSMENT_INDEX.md  STORY_11.4_DETAILED_TRACEABILITY_MATRIX.md  (+48 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  benchmark_summary_performance.py  clean_old_records.py  clear_old_backtest_results.sql  fix_schema.py  init_db.py  pyproject.toml  run.py  run_migrations.py  start_windows.py  test_evidence_notification_service.txt  test_response.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema_with_timescaledb.py  009_campaign_lifecycle_management.py  010_create_allocation_plans_table.py  011_add_exit_management.py  011_system_configuration.py  012_add_campaign_metrics_table.py  013_add_notifications.py  014_add_analytics_fields.py  015_create_sector_mapping.py  016_analytics_indexes.py  017_add_help_system_tables.py  018_add_tutorial_tables.py  020_system_configuration.py  021_add_walk_forward_tables.py  022_add_regression_testing_tables.py  022_add_story_12_6_metrics.py  20251229_210055_add_paper_trading_tables.py  20260102_rename_backtest_metrics_to_summary.py  20260106_add_rejection_metadata.py  20260119_add_updated_at_to_backtest_results.py  20260120_create_users_table.py  20260124_create_signal_approval_queue.py  20260125_create_signal_audit_trail.py  20260125_create_user_watchlist.py  20260130_create_scanner_tables.py  20260204_add_filtered_status_to_scanner_history.py  20260206_add_symbols_no_data_to_scanner_history.py  20260209_add_paper_trading_config_table.py  20260209_add_paper_trading_sessions_table.py  20260213_create_audit_trail_table.py  20260214_add_correlation_ids_to_scanner_history.py  20260218_add_audit_trail_and_peak_equity.py  20260218_add_pattern_type_phase_to_signals.py  20260218_widen_pattern_type_column.py  20260219_final_merge.py  20260220_create_journal_entries.py  20260220_create_price_alerts.py  20260222_add_low_history_flag_to_ohlcv.py  24c29470c922_create_auto_execution_config.py  280de7e8b909_update_backtest_results_for_story_12_1.py  (+5 more)
backend/benchmarks/: README.md  __init__.py  benchmark_config.py  compare_benchmarks.py  conftest.py  locustfile.py  profile_hot_paths.py  profile_with_cprofile.py  run_load_tests.py  test_backtest_speed.py  test_database_queries.py  test_signal_generation_latency.py
backend/benchmarks/profiles/: .gitignore  README.md
backend/benchmarks/reports/: .gitignore  README.md
backend/config/: risk_allocation.yaml  sector_mappings.yaml  volume_thresholds.yaml
backend/config/schemas/: sector_mappings_schema.json
backend/scripts/: analyze_aapl_sc.py  analyze_forex_utad_near_misses.py  backtest_utad_thresholds.py  build_utad_backtest_dataset.py  check_backtest_regression.py  check_data.py  eurusd_multi_timeframe_backtest.py  export_to_parquet.py  generate_backtest_baselines.py  generate_documentation_csv.py  generate_sample_dataset.py  label_patterns.py  manual_scan.py  nas100_multi_timeframe_backtest.py  run_regression_test.py  run_walk_forward.py  seed_db.py  spx500_multi_timeframe_backtest.py  test_15m_only.py  test_orchestrator_live.py  us30_intraday_backtest.py  us30_multi_timeframe_backtest.py  validate_story_11_9.py  verify_labels.py  visualize_pivots.py
backend/src/: __init__.py  config.py  database.py
backend/src/analysis/: __init__.py  campaign_success_analyzer.py  vsa_helpers.py
backend/src/api/: __init__.py  dependencies.py  main.py  websocket.py
backend/src/auth/: api_key_service.py  password_service.py  token_service.py
backend/src/backtesting/: __init__.py  accuracy_tester.py  backtest_baseline_loader.py  backtest_engine.py  backtest_report_generator.py  bar_sequence.py  bias_detector.py  broker_profiles.py  campaign_detector.py  campaign_lifecycle_manager.py  campaign_state_manager.py  commission_calculator.py  cost_validation.py  dataset_loader.py  engine_enhanced.py  enhanced_metrics.py  event_publisher.py  exit_logic_refinements.py  fill_price_calculator.py  intraday_campaign_detector.py  liquidity_calculator.py  market_impact_calculator.py  metrics.py  order_simulator.py  parquet_utils.py  phase_analysis_builder.py  phase_validator.py  portfolio_risk.py  position_manager.py  regime_performance_analyzer.py  regression_test_engine.py  report_formatter.py  report_generator.py  risk_integration.py  slippage_calculator.py  slippage_calculator_enhanced.py  transaction_cost_analyzer.py  walk_forward_config.py  walk_forward_engine.py  walk_forward_suite.py
backend/src/brokers/: __init__.py  alpaca_adapter.py  base_adapter.py  broker_router.py  metatrader_adapter.py  order_builder.py  paper_broker_adapter.py  tradingview_adapter.py
backend/src/cache/: __init__.py  bar_cache.py  statistics_cache.py  validation_cache.py
backend/src/campaign_management/: __init__.py  allocator.py  campaign_manager.py  correlation_mapper.py  (+3 more)
backend/tests/: README.md  conftest.py  test_backtest_compare.py  test_broker_dashboard.py  test_correlation_matrix.py  test_journal.py  test_orders.py  test_price_alerts.py  test_walkforward_stability.py  test_watchlist_status.py
(+1709 files in other folders)
